# Bastion

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/minimal/: bastion.yaml  mcpwarden.yaml
src/bastion/: __init__.py  __main__.py  cli.py
src/bastion/audit/: __init__.py  record.py  writer.py
src/bastion/config/: __init__.py  loader.py  schema.py
src/bastion/dashboard/: __init__.py  app.py  index.html
src/bastion/gateway/: __init__.py  app.py
src/bastion/middleware/: __init__.py  audit_mw.py  error_mw.py
src/mcpwarden/: __init__.py  __main__.py  cli.py
src/mcpwarden/config/: __init__.py  loader.py  schema.py
src/mcpwarden/gateway/: __init__.py  app.py
tests/: conftest.py
tests/e2e/: test_gateway_e2e.py
tests/fixtures/: sample_upstream.py
tests/unit/: test_audit.py  test_config.py  test_dashboard.py
