[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpwarden"
version = "0.1.0"
description = "A local-first control plane for your AI agent's tools — cap spend, rate-limit, and audit every MCP tool call."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Soumil Bhandari" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "llm",
    "gateway",
    "rate-limiting",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "jsonpath-ng>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[project.scripts]
mcpwarden = "mcpwarden.cli:app"

[project.urls]
Homepage = "https://github.com/SoumilBhandari/mcpwarden"
Repository = "https://github.com/SoumilBhandari/mcpwarden"
Issues = "https://github.com/SoumilBhandari/mcpwarden/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpwarden"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/mcpwarden"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["jsonpath_ng.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
